@@ -1,3 +1,5 @@
+- added Kevin Edwards patch to altsocklib.c (should definitively fix the
+looping problem)
 - added support for backports.org in buildfactory/Makefile
 - fixed a bug in browser.lua if the body of a redirect is empty (thanks loprix)
 04/02/2006 0.0.97
